--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "strict": true,
-    "target": "es2015",
-    "lib": [
-      "es2017", "webworker"
-    ]
-  }
+      "outDir": "./dist/",
+      "strict": true,
+      "module": "commonjs",
+      "allowJs": false,
+      "target": "es2015"
+  },
+  "exclude": [
+    "tmp", "woff2", "node_modules", "out"
+  ]
 }
