--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
+    "bundle": "yarn build && yarn webpack",
     "test": "ava -v test"
   },
   "repository": {
@@ -19,7 +21,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "ava": "^0.25.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   },
   "dependencies": {
     "zlibjs": "^0.3.1"
