--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "ava": "^0.25.0",
+    "dotenv": "^6.0.0",
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
