--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^6.0.0",
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "workbox-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
     "zlibjs": "^0.3.1"
