--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "dotenv": "^6.0.0",
+    "ts-loader": "^4.4.2",
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "workbox-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
+    "vue": "^2.5.16",
     "zlibjs": "^0.3.1"
   }
 }
