--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.4",
   "description": "OpenType/WOFF/WOFF2 converter",
   "scripts": {
-    "build:production": "yarn webpack --mode production && NODE_ENV=production yarn html",
-    "build": "yarn webpack && yarn html",
+    "build:production": "webpack --mode production && NODE_ENV=production yarn html",
+    "build": "webpack && yarn html",
     "html": "node build/html.js",
     "make-wasm": "emmake make && yarn copy-wasm",
     "copy-wasm": "cp dist/ffi.wasm public/",
-    "test": "tsc && ava -v test"
+    "test": "mocha --require ts-node/register test/test.ts"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
   "author": "Kenichi Ishibashi <ishibashi.kenichi@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "ava": "^0.25.0",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.4",
+    "chai": "^4.1.2",
+    "dotenv": "^6.0.0",
+    "mocha": "^5.2.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
@@ -30,6 +34,8 @@
     "workbox-webpack-plugin": "^3.3.0"
   },
   "dependencies": {
+    "@types/node": "^10.5.2",
+    "ts-node": "^7.0.0",
     "zlibjs": "^0.3.1"
   }
 }
